--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,10 @@ SourceArt/**/*.png
 SourceArt/**/*.tga
 
 # Binary Files
-./Binaries/*
-Plugins/*/Binaries/*
+Binaries/
+Intermediate/
+Saved/
+./Plugins/*/Binaries/*
 
 # Builds
 ./Build/*
