First Person Shooter Tutorial #2

--- a/FPSProject/Config/DefaultEngine.ini
+++ b/FPSProject/Config/DefaultEngine.ini
@@ -13,5 +13,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/FPSMap.FPSMap
-GlobalDefaultGameMode=/Script/FPSProject.FPSProjectGameModeBase
+GlobalDefaultGameMode=/Game/BP_FPSProjectGameModeBase.BP_FPSProjectGameModeBase_C
+GameDefaultMap=/Game/Maps/FPSMap.FPSMap
 
